XO_Project_UAT/Project--XOGrp--UAT/src/objects/zqu__ZProduct__c.object
<CustomObject>
    <description>The Zuora Product Object.</description>
    <fields>
        <fullName>AdPositionCode__c</fullName>
        <description>To hold the ces.ServiceTypes.AdPositionDescription values. (EX. OppNtb#1, OppTOC, IBC). Ref Sf-1820.
Revisit SF-1914 Request to change from Text to Picklist</description>
        <inlineHelpText>To hold the ces.ServiceTypes.AdPositionDescription values. (EX. OppNtb#1, OppTOC, IBC).</inlineHelpText>
        <label>Ad Position Code</label>
        <picklist>
            <picklistValues>
                <fullName>1stAdBuy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdvIndex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask#1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask#2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BeautySpot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFPrdSpt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EdLet+Adj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emkt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FarForwardOppMasthead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Far Forward Opp Other Editorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFCustom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPAdv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPTOC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get the Look</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GrnPrdSpt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HospAdv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFC-L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFC-R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mast+Adj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MomKnows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NatEmkt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NatMom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NatOppEdLt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NatOppTOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NatPrdSpt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Position__c</fullName>
        <label>Ad Position</label>
        <picklist>
            <picklistValues>
                <fullName>Advertiser Index Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Cover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty Spotlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF Product Spotlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - FP Opp Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump FP TOC 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editor&apos;s Letter + Adjacent Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Far Forward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Ask Carley #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Ask Carley #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Get the Look</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Editor Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Knot Notebook #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Knot Notebook #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Knot Notebook #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Product Editorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Table of Contents #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Table of Contents #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Table of Contents #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Top Picks #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Top Picks #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp Top Picks #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Opp What’s Hot on the Knot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF Other Tangency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Ad Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP Opp Social Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPAdv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Product Spotlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Advertorial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Shape__c</fullName>
        <label>Ad Shape</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown/Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Size__c</fullName>
        <label>Ad Size</label>
        <picklist>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2/3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AvoidDuplicates__c</fullName>
        <description>For Avoiding the Storefront Duplicates</description>
        <inlineHelpText>For Avoiding the Storefront Duplicates</inlineHelpText>
        <label>Avoid Duplicates</label>
        <picklist>
            <picklistValues>
                <fullName>In Any Market/Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Same Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Same Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Same Market/Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CannotBeSoldPast__c</fullName>
        <description>This field is used on the product to determine if it needs to cannot be sold past step 2 date.</description>
        <inlineHelpText>This field is used on the product to determine if it needs to cannot be sold past step 2 date.</inlineHelpText>
        <label>Cannot Be Sold Past</label>
        <picklist>
            <picklistValues>
                <fullName>Step 2 Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Weeks Before Step 2 Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step 3 Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CleanSKU__c</fullName>
        <description>SF-612</description>
        <formula>LEFT(zqu__SKU__c, 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clean SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidate_Inventory__c</fullName>
        <inlineHelpText>By default, inventory is controlled at the Product Rate Plan Allows inventory to roll up to a more general rate plan.</inlineHelpText>
        <label>Consolidate Inventory</label>
        <picklist>
            <picklistValues>
                <fullName>By Product and Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_AddOn__c</fullName>
        <description>Used for Transactions fulfillment (CSP-1100)</description>
        <label>Fulfillment AddOn</label>
        <picklist>
            <picklistValues>
                <fullName>Feature AddOn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile AddOn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Tier__c</fullName>
        <label>Fulfillment Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <label>Fulfillment</label>
        <picklist>
            <picklistValues>
                <fullName>Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdPlacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>BOWPFV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPWPref</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOW KSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOF PFV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KNF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KFV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>The Knot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Bump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaximumSubscriptionTerm__c</fullName>
        <description>This field is used to indicate the product with maximum subscription term, if required.</description>
        <inlineHelpText>This field is used to indicate the product with maximum subscription term, if required.</inlineHelpText>
        <label>Maximum Subscription Term</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MinimumSubscriptionTerm__c</fullName>
        <description>This field is used to indicate the product with minimum subscription term, if required.</description>
        <inlineHelpText>This field is used to indicate the product with minimum subscription term, if required.</inlineHelpText>
        <label>Minimum Subscription Term</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NoAutomatedDiscount__c</fullName>
        <description>This field is used to flag the product if it don&apos;t need Automated Discount to be sold.</description>
        <inlineHelpText>This field is used to flag the product if it don&apos;t need Automated Discount to be sold.</inlineHelpText>
        <label>No Automated Discount</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Plans_With_Capacity__c</fullName>
        <inlineHelpText>The number of rate plans that have a capacity</inlineHelpText>
        <label>Rate Plans With Capacity</label>
        <summaryFilterItems>
            <field>zqu__ProductRatePlan__c.Capacity__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>zqu__ProductRatePlan__c.Capacity__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>zqu__ProductRatePlan__c.zqu__Deleted__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>zqu__ProductRatePlan__c.zqu__ZProduct__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requires2X__c</fullName>
        <label>Requires 2X</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequiresApproval__c</fullName>
        <label>Requires Approval</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequiresCallbackTask__c</fullName>
        <label>Requires Callback Task</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequiresPaidStorefront__c</fullName>
        <description>This field is used to Flag the product, whether a paid storefront is required in same market and/or category.</description>
        <inlineHelpText>This field is used to Flag the product, whether a paid storefront is required in same market and/or category.</inlineHelpText>
        <label>Requires Paid Storefront</label>
        <picklist>
            <picklistValues>
                <fullName>In Any Market/Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Same Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Same Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Same Market/Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <description>to hold ces.ServiceTypes.TinyDesc (Ex. 1/2PgMEA, 1/2Pg4Col). Ref SF-1820</description>
        <inlineHelpText>To hold ces.ServiceTypes.TinyDesc</inlineHelpText>
        <label>Short Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active(Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Allow_Feature_Changes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specify if features in the product can be changed when creating QuoteProductFeatures</description>
        <inlineHelpText>If features in the product can be changed when creating QuoteProductFeatures</inlineHelpText>
        <label>Allow Feature Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <description>This field value will be rolled up from ProductRatePlanChargeTier</description>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for soft deletion</description>
        <inlineHelpText>Flag for soft deletion</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Description__c</fullName>
        <description>The Product Description.</description>
        <inlineHelpText>The Product Description.</inlineHelpText>
        <label>Description</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDateTEXT__c</fullName>
        <formula>TEXT(YEAR( zqu__EffectiveEndDate__c ) ) &amp;  &apos;-&apos; &amp; TEXT(MONTH(zqu__EffectiveEndDate__c))  &amp;  &apos;-&apos; &amp; TEXT(DAY(zqu__EffectiveEndDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveEndDateTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveEndDate__c</fullName>
        <description>The Effective End Date of the Product.</description>
        <inlineHelpText>The Effective End Date of the Product.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDateTEXT__c</fullName>
        <formula>TEXT(YEAR( zqu__EffectiveStartDate__c ) ) &amp; &apos;-&apos; &amp; TEXT(MONTH(zqu__EffectiveStartDate__c)) &amp; &apos;-&apos; &amp; TEXT(DAY(zqu__EffectiveStartDate__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EffectiveStartDateTEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__EffectiveStartDate__c</fullName>
        <description>The Effective Start Date of the Product.</description>
        <inlineHelpText>The Effective Start Date of the Product.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ZProducts</relationshipLabel>
        <relationshipName>ZProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__SKU__c</fullName>
        <description>The Product SKU.</description>
        <inlineHelpText>The Product SKU.</inlineHelpText>
        <label>SKU</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Product.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Product.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZProduct</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>RequiresPaidStorefront__c</columns>
        <columns>NAME</columns>
        <columns>Job_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>zqu__SKU__c</columns>
        <columns>zqu__Deleted__c</columns>
        <columns>LOB__c</columns>
        <columns>zqu__EffectiveStartDate__c</columns>
        <columns>RequiresCallbackTask__c</columns>
        <columns>AvoidDuplicates__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TEMP_RULE_no_deleted_products</fullName>
        <active>false</active>
        <errorConditionFormula>zqu__Deleted__c</errorConditionFormula>
        <errorMessage>No deleted products allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TEMP_RULE_only_test_products_allowed</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(CONTAINS(UPPER(Name), &apos;TEST&apos;))</errorConditionFormula>
        <errorDisplayField>zqu__Active__c</errorDisplayField>
        <errorMessage>Only test products are allowed</errorMessage>
    </validationRules>
</CustomObject>